Adição de suporte ao angular material. Atualização do .gitignore Toolbar e botões no home.html

--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -1,1 +1,20 @@
-<h1>Home :D</h1>
+<md-toolbar>
+  <div class="md-toolbar-tools">
+    <md-button class="md-icon-button" aria-label="Menu">
+      <md-icon md-svg-src=""></md-icon>
+    </md-button>
+
+    <h2>
+      <span>Nome do Curso</span>
+    </h2>
+
+    <span flex></span>
+
+    <md-button> Customizar </md-button>
+    <img src="views/img/francis.jpg" aria-label="User Picture" class="fab-img">
+  </div>
+</md-toolbar>
+
+<md-content flex layout-padding>
+
+</md-content>
